# scalable-systems-ravan

./: .gitignore  CLAUDE.md  README.md  bert_20newsgroups.py  bert_20newsgroups_ravan.py  requirements.txt
federated/: __init__.py  client.py  data.py  lora.py  model.py  plot.py  ravan.py  server.py  train_fedit.py  train_ravan.py  utils.py  warmup.py
federated_bert/: __init__.py  client_app.py  pyproject.toml  server_app.py  task.py
jobs/: submit_fedit.sh  submit_ravan_gs.sh  submit_ravan_svd.sh  sweep.sh
tests/: test_aggregation.py
